Fix dracula avatar width issue on narrow screens

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -26,3 +26,7 @@ header {
 ul {
 	margin: 0.85rem 0;
 }
+
+.drac-avatar {
+	min-width: 4.5rem;
+}
